--- a/public/dashboard/profile/profile.css
+++ b/public/dashboard/profile/profile.css
@@ -206,7 +206,15 @@ body {
     border-radius: 10px;
     width: 90%;
     max-width: 300px;
+    max-height: 500px;
+    overflow-y: auto;
     text-align: center;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .settings-content::-webkit-scrollbar {
+    display: none;
   }
   
   .form-group {
