--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -49,11 +49,11 @@ body {
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
-  color: #797979; }
+  color: #F1F1F1; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", serif;
-  font-weight: bold; }
+  font-weight: bold;}
 
 button:focus {
   outline: none;
@@ -112,7 +112,7 @@ ul {
     font-family: "Playfair Display", serif;
     font-weight: normal;
     line-height: 24px;
-    color: #797979;
+    color: #F1F1F1;
     margin-bottom: 0px; }
 
 /* End Main Title Area css
@@ -244,7 +244,7 @@ ul {
       margin-right: 15px; }
       .top_menu .header_social li a {
         font-size: 13px;
-        color: #797979;
+        color: #F1F1F1;
         display: inline-block;
         line-height: 42px;
         transition: all 300ms linear 0s; }
@@ -262,7 +262,7 @@ ul {
     margin-right: 50px;
     font-family: "Playfair Display", serif;
     font-weight: normal;
-    color: #797979;
+    color: #F1F1F1;
     transition: all 300ms linear 0s; }
     .top_menu .dn_btn:hover {
       color: #0051d2; }
@@ -415,7 +415,7 @@ ul {
         font-size: 16px; } }
   .card-feature__subtitle {
     margin-bottom: 0;
-    color: #797979; }
+    color: #F1F1F1; }
   .card-feature:hover {
     background: #fff;
     box-shadow: 0px 10px 20px 0px rgba(33, 20, 106, 0.1); }
@@ -650,7 +650,7 @@ ul {
     margin-bottom: 15px; }
     .single-blog .meta-bottom a {
       display: inline-block;
-      color: #797979;
+      color: #F1F1F1;
       position: relative;
       font-size: 13px;
       margin-right: 30px;
@@ -664,7 +664,7 @@ ul {
     .single-blog .meta-top a {
       display: inline-block;
       font-size: 13px;
-      color: #797979;
+      color: #F1F1F1;
       text-transform: uppercase;
       position: relative;
       transition: all 300ms linear 0s; }
@@ -2222,7 +2222,7 @@ h6 {
   z-index: 3; }
 
 .input-group-icon .icon i {
-  color: #797979; }
+  color: #F1F1F1; }
 
 .input-group-icon .single-input {
   padding-left: 45px; }
@@ -3086,7 +3086,7 @@ h6 {
     border-top: 1px solid #e8edf1; }
     .card-team .team-footer .dn_btn {
       font-size: 14px;
-      color: #797979; }
+      color: #F1F1F1; }
       .card-team .team-footer .dn_btn i {
         margin-right: 9px;
         font-size: 13px; }
@@ -3189,7 +3189,7 @@ h6 {
     margin-bottom: 16px; }
   .card-service__subtitle {
     margin-bottom: 0;
-    color: #797979;
+    color: #F1F1F1;
     margin-bottom: 24px; }
   .card-service__link {
     font-size: 15px;
@@ -3218,7 +3218,7 @@ h6 {
     position: relative; }
   .area-heading p {
     font-size: 14px;
-    color: #797979;
+    color: #F1F1F1;
     padding-left: 40px;
     margin-top: 5px; }
     @media (max-width: 1199px) {
@@ -3306,7 +3306,7 @@ h6 {
     list-style: none; }
     .footer-area .single-footer-widget ul li a {
       transition: all 300ms linear 0s;
-      color: #797979; }
+      color: #F1F1F1; }
       .footer-area .single-footer-widget ul li a:hover {
         color: #0051d2; }
 .footer-area .single-footer-widget .form-wrap {
@@ -3317,7 +3317,7 @@ h6 {
   width: 80% !important;
   font-weight: 300;
   border: 1px solid #e8edf1;
-  color: #797979;
+  color: #F1F1F1;
   border-radius: 0;
   font-size: 14px;
   padding: 10px;
