memperbaiki tombol mata untuk show password serta membuatkan folder baru dashbord pada bagian js nya

--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -1509,6 +1509,11 @@ ul {
     @media (max-width: 1199px) {
       .appointment-area .card .btn-link.collapsed {
         font-size: 14px; } }
+    @media (max-width: 990px) and (min-width: 770px) {
+      .card {
+        width: 150%;
+      }
+    }
   .appointment-area .card .card-body {
     font-weight: 300;
     font-size: 14px;
